error message when encoding via VAAPI AMD
Do
ffmpeg -hwaccel vaapi -hwaccel_device /dev/dri/renderD129 -hwaccel_output_format vaapi -ss 15 -i input.mp4 -t 15 -c:v h264_vaapi -global_quality 15 -c:a copy -map 0 output.mp4
Then this error occurs:
[h264_vaapi @ 0x55ae9c852580] Driver does not support some wanted packed headers (wanted 0xd, found 0x1).
Happens also with hevc_vaapi. It might be just a cosmetic issue, as there is no apparent failure and the resulting encode seems to be fine. Error message does not occur with Intel GPU.
System information
inxi -GSC -xx
System: Host: linux Kernel: 5.8.9-14-tkg-cfs x86_64 bits: 64 compiler: N/A Desktop: KDE Plasma 5.19.5 tk: Qt 5.15.1
wm: kwin_x11 dm: startx Distro: Arch Linux
CPU: Info: Quad Core model: Intel Core i7-6700K bits: 64 type: MT MCP arch: Skylake-S rev: 3 L2 cache: 8192 KiB
flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 ssse3 vmx bogomips: 63999
Speed: 3721 MHz min/max: N/A Core speeds (MHz): 1: 3721 2: 3847 3: 3466 4: 3940 5: 3688 6: 3600 7: 4000 8: 3418
Graphics: Device-1: Intel HD Graphics 530 vendor: ASRock driver: i915 v: kernel bus ID: 00:02.0 chip ID: 8086:1912
Device-2: Advanced Micro Devices [AMD/ATI] Ellesmere [Radeon RX 470/480/570/570X/580/580X/590]
vendor: Micro-Star MSI driver: amdgpu v: kernel bus ID: 01:00.0 chip ID: 1002:67df
Display: server: X.org 1.20.9 compositor: kwin_x11 driver: amdgpu resolution: <xdpyinfo missing>
OpenGL: renderer: AMD Radeon RX 480 Graphics (POLARIS10 DRM 3.38.0 5.8.9-14-tkg-cfs LLVM 10.0.1)
v: 4.6 Mesa 20.3.0-devel (git-8939c642e0) direct render: Yes
ffmpeg 4.3.1